<resources>
    <string name="app_name">TailwebsTask</string>
    <string name="splash_icon">Splash_icon</string>
    <string name="university_logo">UNIVERSITY LOGO</string>
    <string name="a_world_of_opportunity">A world of Opportunity</string>
    <string name="make_your_university_life">Make your university life the best it can be, in a world of opportunity</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>


    <string name="next">Next</string>
    <string name="be_part">Be part of our opportunity</string>
    <string name="perfect_app">Perfect your application</string>
    <string name="pg_open">Postgraduate applications open</string>
    <string name="be_part_text">Our world never stops moving</string>
    <string name="perfect_app_text">Everything you need to know about applying</string>
    <string name="pg_open_text">Join our world</string>
    <string name="title_activity_landing">Tailwebs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_tailwebs">Welcome to Tailwebs</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign up</string>
    <string name="add_subject_title">Add subject details</string>
    <string name="enter_marks_here">Enter marks here</string>
    <string name="enter_subject_here">Enter subject here</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="submit">Submit</string>
    <string name="no_data_available">No data available</string>
    <string name="log_out">Log out</string>
    <string name="dismiss">Dismiss</string>
    <string name="are_you_sure">Are you sure you want log out?</string>
    <string name="add_details">Add details</string>
    <string name="enter_fields">Enter all the details!</string>
    <string name="enter_value">Enter some value</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="invalid_mail">Enter the valid e-mail id!</string>
    <string name="invalid_number">Enter the valid mobile number!</string>
    <string name="update">Update</string>

</resources>
