<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".welcomeScreen.WelcomeScreen">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/screen_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/indicator_tabLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_marginBottom="@dimen/dimen_16dp"
                    app:tabIndicatorHeight="0dp"
                    app:tabBackground="@drawable/indicator_selector"/>
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_48dp"
                    android:text="@string/a_world_of_opportunity"
                    android:gravity="left|center"
                    android:textSize="@dimen/dimen_28sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:text="@string/make_your_university_life"
                    android:gravity="left|center"
                    android:textSize="@dimen/dimen_14sp"
                    android:textColor="@color/gray_num_highlight"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"/>
                <Button
                    android:id="@+id/get_start_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:background="@drawable/gradient_btn"
                    android:text="@string/get_started"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_marginBottom="@dimen/dimen_16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginEnd="@dimen/dimen_16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_gravity="left|center"
                        android:text="@string/already_have_an_account"/>
                    <TextView
                        android:id="@+id/log_in_welcome_page"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_gravity="left|center"
                        android:text="@string/log_in"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"/>

                </LinearLayout>
                
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>