<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".signInPage.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/login_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_4dp"
            app:cardCornerRadius="@dimen/dimen_4dp"
            app:cardElevation="@dimen/dimen_4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/dimen_48dp"
                    android:text="@string/welcome_to_tailwebs"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_20sp"
                    android:textStyle="bold"
                    tools:textColor="@android:color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:paddingEnd="@dimen/dimen_8dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_name"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:paddingEnd="@dimen/dimen_8dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_e_mail"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/number_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:paddingEnd="@dimen/dimen_8dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/number_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter mobile number"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:paddingEnd="@dimen/dimen_8dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/sign_up_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:background="@drawable/gradient_btn"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/log_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:background="@drawable/gradient_btn"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>