<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/gray_num_highlight"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/login_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_4dp"
            app:cardCornerRadius="@dimen/dimen_4dp"
            app:cardElevation="@dimen/dimen_4dp"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/student_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:paddingEnd="@dimen/dimen_8dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/student_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name_here"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/subject_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:paddingEnd="@dimen/dimen_8dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/subject_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_subject_here"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/marks_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:paddingEnd="@dimen/dimen_8dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/marks_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_marks_here"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:background="@drawable/gradient_btn"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</ScrollView>